syntax = "proto3";
package raft;

option go_package = "github.com/Sjk4824/distributed_kv_store/api;api";

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message RequestVoteRequest {
  string candidate_id = 1;
  uint64 term = 2;
  uint64 last_log_index = 3; 
  uint64 last_log_term = 4; 
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message Command{
    string client_id = 1; 
    uint64 request_id = 2; 
    oneof op {
        Put put = 3; 
        Delete del = 4; 
    }
}
message Put {
  string key = 1;
  bytes value = 2;
}

message Delete {
  string key = 1;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  Command cmd = 3;
}

message AppendEntriesRequest {
  string leader_id = 1;
  uint64 term = 2;
  uint64 prev_log_index = 3; 
  uint64 prev_long_term = 4; 
  repeated LogEntry entries = 5; 
  uint64 leader_commit = 6; 
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 match_indec = 3; 
}
